# lineage

./: .gitignore  PROMPT.md  README.md  pyproject.toml
.sisyphus/: ralph-loop.local.md
src/lineage/: __init__.py  __main__.py  analysis.py  cli.py  config.py  genome.py  recording.py  renderer.py  simulation.py  speciation.py  world.py
tests/: test_genome.py  test_simulation.py  test_speciation.py  test_world.py
web/: ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: CameraControls.tsx  Environment.tsx  InstancedOrganisms.tsx  LODOrganisms.tsx  OrganismAnimation.tsx  OrganismMesh.tsx  PostProcessing.tsx  VisualEffects.tsx  World3D.tsx
web/src/components/HUD/: ComparisonView.tsx  EducationalOverlay.tsx  EventLog.tsx  EventTimeline.tsx  GenomeInspector.tsx  HelpPanel.tsx  ParameterPanel.tsx  PhylogenyTree.tsx  PlaybackControls.tsx  RecordingLoader.tsx  StatsGraph.tsx  StatsPanel.tsx
web/src/hooks/: useSimulationWorker.ts
web/src/simulation/: behavior.test.ts  behavior.ts  config.ts  genome.test.ts  genome.ts  recording.ts  simulation.test.ts  simulation.ts  spatial-hash.test.ts  spatial-hash.ts  speciation.test.ts  speciation.ts  types.ts  world.test.ts  world.ts
web/src/simulation/__tests__/: recording.test.ts
web/src/store/: SimulationContext.tsx
web/src/tests/: generate-parity-report.ts  parity-utils.ts  parity.test.ts
web/src/utils/: math.test.ts  math.ts  organism-shaders.ts  prng.test.ts  prng.ts
web/src/workers/: simulation.worker.ts
(+2 files in other folders)
