[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lineage"
version = "0.1.0"
description = "Evolutionary simulator - digital organisms compete, mutate, and speciate"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
rich = [
    "rich>=13.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
lineage = "lineage.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lineage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
